// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage should render component when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Configure
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your MFA Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset your Multi Factor Authentication (MFA) device for use with Reapit Connect. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Configure MFA Authenticator
          </h1>
          <div
            class="el-loader-container"
          >
            <div
              class="el-mb11 el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Configure
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your MFA Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset your Multi Factor Authentication (MFA) device for use with Reapit Connect. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Configure MFA Authenticator
        </h1>
        <div
          class="el-loader-container"
        >
          <div
            class="el-mb11 el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HomePage should render component with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Configure
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your MFA Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset your Multi Factor Authentication (MFA) device for use with Reapit Connect. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Configure MFA Authenticator
          </h1>
          <div
            class="el-mb7 el-fade-in el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              You have an active authenticator registered for your account. If you want to re-configure, click the ‘Reset Authenticator’ button below.
            </div>
          </div>
          <div
            class="el-mb11 el-fade-in el-grid"
          >
            <div
              class="el-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Authenticator Type
              </h2>
              <p
                class="el-has-grey-text el-has-no-margin el-body-text"
              >
                Authenticator App
              </p>
            </div>
            <div
              class="el-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Status
              </h2>
              <p
                class="el-has-grey-text el-has-no-margin el-body-text"
              >
                Active
              </p>
            </div>
            <div
              class="el-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Created
              </h2>
              <p
                class="el-has-grey-text el-has-no-margin el-body-text"
              >
                11/11/2022 11:03
              </p>
            </div>
            <div
              class="el-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Last Updated
              </h2>
              <p
                class="el-has-grey-text el-has-no-margin el-body-text"
              >
                11/11/2022 11:03
              </p>
            </div>
          </div>
          <button
            class="el-intent-primary el-button"
          >
            Reset Authenticator
            <div
              class="el-button-loader"
            />
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Configure
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your MFA Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset your Multi Factor Authentication (MFA) device for use with Reapit Connect. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Configure MFA Authenticator
        </h1>
        <div
          class="el-mb7 el-fade-in el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            You have an active authenticator registered for your account. If you want to re-configure, click the ‘Reset Authenticator’ button below.
          </div>
        </div>
        <div
          class="el-mb11 el-fade-in el-grid"
        >
          <div
            class="el-col"
          >
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Authenticator Type
            </h2>
            <p
              class="el-has-grey-text el-has-no-margin el-body-text"
            >
              Authenticator App
            </p>
          </div>
          <div
            class="el-col"
          >
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Status
            </h2>
            <p
              class="el-has-grey-text el-has-no-margin el-body-text"
            >
              Active
            </p>
          </div>
          <div
            class="el-col"
          >
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Created
            </h2>
            <p
              class="el-has-grey-text el-has-no-margin el-body-text"
            >
              11/11/2022 11:03
            </p>
          </div>
          <div
            class="el-col"
          >
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Last Updated
            </h2>
            <p
              class="el-has-grey-text el-has-no-margin el-body-text"
            >
              11/11/2022 11:03
            </p>
          </div>
        </div>
        <button
          class="el-intent-primary el-button"
        >
          Reset Authenticator
          <div
            class="el-button-loader"
          />
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HomePage should render component with no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Configure
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your MFA Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset your Multi Factor Authentication (MFA) device for use with Reapit Connect. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Configure MFA Authenticator
          </h1>
          <div
            class="el-mb7 el-fade-in el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No authenticators configured for your user account. Please use the button below to configure one.
            </div>
          </div>
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-critical el-button"
              >
                Configure MFA Device
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Configure
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your MFA Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset your Multi Factor Authentication (MFA) device for use with Reapit Connect. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Configure MFA Authenticator
        </h1>
        <div
          class="el-mb7 el-fade-in el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No authenticators configured for your user account. Please use the button below to configure one.
          </div>
        </div>
        <div
          class="el-button-group"
        >
          <div
            class="el-button-group-inner"
          >
            <button
              class="el-intent-critical el-button"
            >
              Configure MFA Device
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
